--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ header {
 }
 
 .top {
- background-image: url('file:///C:/Users/%E7%9B%B8%E9%A6%AC%E6%98%A5%E8%B2%B4/Desktop/Programing/html/Visual%20Studio%20Code/1.code%E7%B7%B4%E7%BF%92/1.LP/side%20bizz/photo/main-back.jpg');
+ background-image: url('https://github.com/mainprograming/cide-bizz/blob/main/photo/main-back.jpg?raw=true');
  background-size: cover;
  padding: 240px 0;
 }
